--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
               </div>
 
           </div>
-          <div class="row">
+          <div class="row form">
           <div class="col-md-4">
             <label>FULL NAME:</label>
             <input type="text" name="name" class="from-control">
